# teleclaude

./: .env.example  .gitignore  LICENSE  PRD.md  README.md  deploy.sh  pyproject.toml  scheduled_tasks.example.yaml  scheduled_tasks.yaml
deploy/: telegram-bridge.service
openspec/changes/core-bridge/: design.md  proposal.md  tasks.md
openspec/changes/core-bridge/specs/claude-runner/: spec.md
openspec/changes/core-bridge/specs/session-management/: spec.md
openspec/changes/core-bridge/specs/telegram-bot/: spec.md
openspec/changes/deploy-vps/: design.md  proposal.md  tasks.md
openspec/changes/expanded-inputs/: proposal.md  tasks.md
openspec/changes/files-and-cancel/: design.md  proposal.md  tasks.md
openspec/changes/may15-add-codex-backend-runner/: design.md  proposal.md  tasks.md
openspec/changes/thinking-status/: design.md  proposal.md  tasks.md
openspec/changes/unified-thinking-message/: design.md  proposal.md  tasks.md
src/bot/: config.py  construct.py  handlers.py  main.py
src/bot/services/: agent_runner.py  claude_runner.py  cli_backends.py  file_cleaner.py  runner_events.py  scheduler.py  session_store.py  task_runner.py  telegram_ui.py  transcriber.py
tests/: test_agent_runner.py  test_attachments_extended.py  test_cancel.py  test_claude_runner_thinking.py  test_cli_backends.py  test_config.py  test_file_cleaner.py  test_file_handling.py  test_message_metadata.py  test_prompt_builder.py  test_scheduler.py  test_session_store.py  test_streaming_modes.py  test_task_runner.py  test_telegram_ui.py  test_transcriber.py  test_typing.py
(+9 files in other folders)
